add quiz instractutions page to the index html

--- a/index.html
+++ b/index.html
@@ -29,5 +29,21 @@
         <h1>Good Luck!!!</h1>
     </div>
 </div>
+   <!-- Instructions page -->
+   <div class="instructions">
+    <div class="instr_head"><h3>Quiz instructions</h3></div>
+    <div class="instr_body">
+        <div>1. The complete quiz consists of 10 questions, randomly mixed in difﬁculty.</div>
+        <div>2. You are limited in time by 100 seconds.</div>
+        <div>3. You can't skip a question or return back to it later.</div>
+        <div>4. You can't exit from the Quiz while you're playing.</div>
+        <div>5. Correct answer weighs one point.</div>
+    </div>
+    <!--start and exit buttons-->
+    <div class="buttons">
+        <button class="exit_quiz">Exit Quiz</button>
+        <button class="restart">start</button>
+    </div>
+</div>
 </body>
 </html>
