add quiz page and result page to the index html

--- a/index.html
+++ b/index.html
@@ -45,5 +45,46 @@
         <button class="restart">start</button>
     </div>
 </div>
+    <!-- Quiz page -->
+    <div class="quiz_page">
+        <header>
+            <div class="quiz_head">Quiz questions</div>
+            <div class="clock">
+                <div class="show-time">Time Left</div>
+                <div class="count_down">100</div>
+            </div>
+            <div class="time_line"></div>
+            <div>
+                <div class="sum_qstn"></div>
+                <!-- I have add Question Count Number from JavaScript -->
+            </div>
+        </header>
+        <section>
+            <div class="questionz">
+                <!-- I have add question from JavaScript -->
+            </div>
+            <div class="option_list">
+                <!-- I have add options from JavaScript -->
+            </div>
+        </section>
+        <!-- Footer of Quiz page -->
+        <footer>
+            <button class="next_button">Next</button>
+        </footer>
+    </div>
+    <!-- Results page -->
+    <div class="results_page">
+        <div class="complete_text" style="text-align: center;">
+            <h2>Quiz complete!!!</h2>
+            <h5>and your score is...</h5>
+        </div>
+        <div class="score_text">
+            <!-- Here I've inserted Score Result from JavaScript -->
+        </div>
+        <div class="buttons">
+            <button class="restart">RESTART</button>
+            <button class="exit_quiz">EXIT</button>
+        </div>
+    </div>
 </body>
 </html>
