add java script links

--- a/index.html
+++ b/index.html
@@ -86,5 +86,9 @@
             <button class="exit_quiz">EXIT</button>
         </div>
     </div>
+      <!-- This JavaScript file contain Questions and Options only -->
+      <script src="js/java_questions.js"></script>
+      <!-- In this JavaScript file there is Quiz Code -->
+      <script src="js/java_script.js"></script>  
 </body>
 </html>
