add javascripts files to Assets folder

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         </div>
     </div>
       <!-- This JavaScript file contain Questions and Options only -->
-      <script src="js/java_questions.js"></script>
+      <script src="/assets/js/java_questions.js"></script>
       <!-- In this JavaScript file there is Quiz Code -->
-      <script src="js/java_script.js"></script>  
+      <script src="/assets/js/java_script.js"></script>  
 </body>
 </html>
