add addition of bonus time to the primary timer

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <div class="buttons">
             <button class="restart">RESTART</button>
             <button class="exit_quiz">EXIT</button>
+            <button class="view_explanation">View Explanations</button> 
         </div>
     </div>
     <div class="explanations_page">
@@ -95,8 +96,8 @@
             <hr>
             <div class="explanations_list">
                 <!-- Explanations will be appended here dynamically from java_script.js -->
+            </div>
         </div>
-    </div>
         <hr>
         <button class="close_button">done</button>
     </div>
