fixing javascript link

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <button class="close_button">done</button>
     </div>
       <!-- This JavaScript file contain Questions and Options only -->
-      <script src="/assets/js/java_questions.js"></script>
+      <script src="assets/js/java_questions.js"></script>
       <!-- In this JavaScript file there is Quiz Code -->
-      <script src="/assets/js/java_script.js"></script>  
+      <script src="assets/js/java_script.js"></script>  
 </body>
 </html>
